--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .my {
+            background: #ccc;
+        }
+    </style>
 </head>
 <body>
     <ul>
         <li>Здесь будут ваши сообщения:</li>
-        <li></li>
     </ul>
 
-    <input type="text" placeholder="Введите сообщение">
+    <input class="uid" type="text" placeholder="Введите id">
+    <input class="message" type="text" placeholder="Введите сообщение">
     <button>Send</button>
 
     <script src="./index.js"></script>
